--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Rozvoz Specialit Rater",
-  "version": "1.4",
+  "version": "1.5",
   "description": "Rate your lunch items on RozvozSpecialit.cz with 👍/👎 and see your past likes/dislikes.",
   "permissions": [
     "storage"
@@ -24,7 +24,8 @@
     {
       "resources": [
         "icons/thumb_up.svg",
-        "icons/thumb_down.svg"
+        "icons/thumb_down.svg",
+        "icons/neutral.svg"
       ],
       "matches": [
         "https://www.rozvozspecialit.cz/*"
